--- a/StockAnalysis/Login/LoginViewController.xib
+++ b/StockAnalysis/Login/LoginViewController.xib
@@ -40,21 +40,23 @@
                                 <constraint firstAttribute="height" constant="1" id="P8D-ve-T7T"/>
                             </constraints>
                         </view>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="emg-wb-7QF">
-                            <rect key="frame" x="37" y="7" width="54" height="30"/>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="emg-wb-7QF">
+                            <rect key="frame" x="37" y="17" width="72" height="20"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="54" id="v29-jB-grl"/>
+                                <constraint firstAttribute="width" constant="72" id="v29-jB-grl"/>
                             </constraints>
-                            <state key="normal" title="+86">
-                                <color key="titleColor" white="0.75" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                            <state key="normal" title="+12345" image="arrow_down">
+                                <color key="titleColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
                             </state>
                             <connections>
                                 <action selector="clickCountryCode:" destination="-1" eventType="touchDown" id="TDR-SC-s1f"/>
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nvR-1i-5U1">
-                            <rect key="frame" x="37" y="76" width="31" height="30"/>
+                            <rect key="frame" x="34" y="75" width="37" height="34"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
                             <state key="normal" title="密码">
                                 <color key="titleColor" white="0.75" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </state>
@@ -74,12 +76,12 @@
                             <textInputTraits key="textInputTraits"/>
                         </textField>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="手机号" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="f7T-iv-6XE">
-                            <rect key="frame" x="91" y="8" width="247" height="30"/>
+                            <rect key="frame" x="127" y="8" width="211" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="30" id="2oL-l5-ga4"/>
                             </constraints>
                             <nil key="textColor"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
                             <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                         </textField>
                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="48G-6D-z03" userLabel="lookpw">
@@ -97,7 +99,7 @@
                         <constraint firstItem="QFC-dN-nAW" firstAttribute="top" secondItem="qzo-MG-jE9" secondAttribute="top" constant="36" id="37P-XK-XHy"/>
                         <constraint firstAttribute="height" constant="107" id="3p0-9Z-LuF"/>
                         <constraint firstItem="JqC-km-vbC" firstAttribute="leading" secondItem="QFC-dN-nAW" secondAttribute="leading" id="5ut-os-cvP"/>
-                        <constraint firstItem="f7T-iv-6XE" firstAttribute="leading" secondItem="emg-wb-7QF" secondAttribute="leading" constant="54" id="8em-xF-R7r"/>
+                        <constraint firstItem="f7T-iv-6XE" firstAttribute="leading" secondItem="emg-wb-7QF" secondAttribute="leading" constant="90" id="8em-xF-R7r"/>
                         <constraint firstItem="emg-wb-7QF" firstAttribute="leading" secondItem="QFC-dN-nAW" secondAttribute="leading" id="A28-tY-dGz"/>
                         <constraint firstItem="f7T-iv-6XE" firstAttribute="trailing" secondItem="QFC-dN-nAW" secondAttribute="trailing" id="UuU-FW-cW3"/>
                         <constraint firstItem="QFC-dN-nAW" firstAttribute="leading" secondItem="qzo-MG-jE9" secondAttribute="leading" constant="37" id="dIF-uy-kCr"/>
@@ -108,21 +110,21 @@
                     </constraints>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7vX-CO-YBv">
-                    <rect key="frame" x="37" y="389" width="301" height="35"/>
+                    <rect key="frame" x="15" y="374" width="345" height="47"/>
                     <color key="backgroundColor" red="0.14509803921568626" green="0.17254901960784313" blue="0.19607843137254902" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="35" id="0KA-cv-38u"/>
+                        <constraint firstAttribute="height" constant="47" id="0KA-cv-38u"/>
                     </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
                     <state key="normal" title="登录">
-                        <color key="titleColor" red="0.7843137255" green="0.63921568630000003" blue="0.20784313730000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="titleColor" red="0.92941176470588238" green="0.72549019607843135" blue="0.062745098039215685" alpha="1" colorSpace="calibratedRGB"/>
                     </state>
                     <connections>
                         <action selector="clickLoginIn:" destination="-1" eventType="touchUpInside" id="LpF-nx-QED"/>
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VKy-fx-ljx">
-                    <rect key="frame" x="57" y="429" width="92" height="30"/>
+                    <rect key="frame" x="36" y="437" width="92" height="30"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="92" id="Poo-HZ-T4l"/>
                         <constraint firstAttribute="height" constant="30" id="q9X-ab-x69"/>
@@ -135,7 +137,7 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Iwy-Li-NvR">
-                    <rect key="frame" x="256" y="429" width="62" height="30"/>
+                    <rect key="frame" x="281" y="437" width="62" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="jfE-Xk-2u1"/>
                         <constraint firstAttribute="width" constant="62" id="uvd-0h-5nl"/>
@@ -152,14 +154,14 @@
             <constraints>
                 <constraint firstAttribute="top" secondItem="Gnn-q2-hpc" secondAttribute="top" constant="-55" id="5bs-cT-X95"/>
                 <constraint firstItem="qzo-MG-jE9" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="7aW-af-0X7"/>
-                <constraint firstItem="Iwy-Li-NvR" firstAttribute="trailing" secondItem="7vX-CO-YBv" secondAttribute="trailing" constant="-20" id="8DY-Ng-VFh"/>
-                <constraint firstItem="VKy-fx-ljx" firstAttribute="top" secondItem="7vX-CO-YBv" secondAttribute="top" constant="40" id="AhW-du-s6F"/>
-                <constraint firstItem="VKy-fx-ljx" firstAttribute="leading" secondItem="7vX-CO-YBv" secondAttribute="leading" constant="20" id="B6U-E4-0F4"/>
+                <constraint firstItem="Iwy-Li-NvR" firstAttribute="trailing" secondItem="7vX-CO-YBv" secondAttribute="trailing" constant="-17" id="8DY-Ng-VFh"/>
+                <constraint firstItem="VKy-fx-ljx" firstAttribute="top" secondItem="7vX-CO-YBv" secondAttribute="top" constant="63" id="AhW-du-s6F"/>
+                <constraint firstItem="VKy-fx-ljx" firstAttribute="leading" secondItem="7vX-CO-YBv" secondAttribute="leading" constant="21" id="B6U-E4-0F4"/>
                 <constraint firstItem="qzo-MG-jE9" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" id="EkN-65-AnA"/>
-                <constraint firstItem="7vX-CO-YBv" firstAttribute="leading" secondItem="qzo-MG-jE9" secondAttribute="leading" constant="37" id="PRI-OP-0Qa"/>
-                <constraint firstItem="7vX-CO-YBv" firstAttribute="trailing" secondItem="qzo-MG-jE9" secondAttribute="trailing" constant="-37" id="TRg-X1-nOb"/>
-                <constraint firstItem="Iwy-Li-NvR" firstAttribute="top" secondItem="7vX-CO-YBv" secondAttribute="top" constant="40" id="eRS-TL-J2B"/>
-                <constraint firstItem="7vX-CO-YBv" firstAttribute="top" secondItem="qzo-MG-jE9" secondAttribute="bottom" constant="62" id="efC-5J-wkK"/>
+                <constraint firstItem="7vX-CO-YBv" firstAttribute="leading" secondItem="qzo-MG-jE9" secondAttribute="leading" constant="15" id="PRI-OP-0Qa"/>
+                <constraint firstItem="7vX-CO-YBv" firstAttribute="trailing" secondItem="qzo-MG-jE9" secondAttribute="trailing" constant="-15" id="TRg-X1-nOb"/>
+                <constraint firstItem="Iwy-Li-NvR" firstAttribute="top" secondItem="7vX-CO-YBv" secondAttribute="top" constant="63" id="eRS-TL-J2B"/>
+                <constraint firstItem="7vX-CO-YBv" firstAttribute="top" secondItem="qzo-MG-jE9" secondAttribute="bottom" constant="47" id="efC-5J-wkK"/>
                 <constraint firstAttribute="top" secondItem="qzo-MG-jE9" secondAttribute="bottom" constant="-327" id="o4a-7q-xOU"/>
                 <constraint firstItem="Gnn-q2-hpc" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="oS7-x6-Sqp"/>
             </constraints>
@@ -167,6 +169,7 @@
         </view>
     </objects>
     <resources>
+        <image name="arrow_down" width="15" height="9"/>
         <image name="eye-c" width="43" height="24"/>
         <image name="logo-big" width="157" height="181"/>
     </resources>
