--- a/StockAnalysis/Login/MailRegistViewController.xib
+++ b/StockAnalysis/Login/MailRegistViewController.xib
@@ -32,7 +32,7 @@
                     </constraints>
                 </imageView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AsB-Dw-CQi">
-                    <rect key="frame" x="57" y="553" width="92" height="20"/>
+                    <rect key="frame" x="16" y="556" width="92" height="20"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="92" id="Guj-e2-Ahs"/>
                         <constraint firstAttribute="height" constant="20" id="fi7-ai-VW7"/>
@@ -43,7 +43,7 @@
                     </state>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rzC-s0-t4n">
-                    <rect key="frame" x="57" y="533" width="150" height="20"/>
+                    <rect key="frame" x="16" y="535" width="150" height="20"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="20" id="mri-Mi-iqP"/>
                         <constraint firstAttribute="width" constant="150" id="pbr-eh-kzH"/>
@@ -52,20 +52,6 @@
                     <state key="normal" title="点击“注册”按钮，即表示您同意">
                         <color key="titleColor" red="0.7803921568627451" green="0.7803921568627451" blue="0.7803921568627451" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
-                </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LF2-Vo-9q5">
-                    <rect key="frame" x="236" y="533" width="82" height="20"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="20" id="aCI-cg-oIQ"/>
-                        <constraint firstAttribute="width" constant="82" id="fas-Wt-LJl"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                    <state key="normal" title="手机号注册">
-                        <color key="titleColor" red="0.5607843137254902" green="0.5607843137254902" blue="0.5607843137254902" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    </state>
-                    <connections>
-                        <action selector="clickPhoneRegist:" destination="-1" eventType="touchDown" id="9kn-JA-EAJ"/>
-                    </connections>
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="J4e-0y-stj">
                     <rect key="frame" x="0.0" y="255" width="375" height="176"/>
@@ -78,21 +64,23 @@
                             </constraints>
                         </view>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KMe-Oa-fqG">
-                            <rect key="frame" x="37" y="7" width="40" height="30"/>
+                            <rect key="frame" x="37" y="7" width="81" height="30"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="40" id="q8p-vj-X0J"/>
+                                <constraint firstAttribute="height" constant="30" id="kLm-n4-XUM"/>
+                                <constraint firstAttribute="width" constant="81" id="q8p-vj-X0J"/>
                             </constraints>
-                            <state key="normal" title="邮箱">
-                                <color key="titleColor" white="0.75" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                            <state key="normal" title="邮箱地址">
+                                <color key="titleColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                             </state>
                         </button>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="点击输入" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KEf-XZ-kbp">
-                            <rect key="frame" x="75" y="8" width="263" height="30"/>
+                            <rect key="frame" x="133" y="8" width="205" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="30" id="9TE-Ov-I4e"/>
                             </constraints>
                             <nil key="textColor"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
                             <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                         </textField>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7GE-jq-JzX" userLabel="lineb">
@@ -106,7 +94,7 @@
                             <rect key="frame" x="37" y="77" width="216" height="30"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <nil key="textColor"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IcO-UO-xV9" userLabel="linec">
@@ -140,7 +128,7 @@
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sf2-YG-R0i">
                             <rect key="frame" x="251" y="76" width="87" height="33"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <state key="normal" title="发送邀请码">
                                 <color key="titleColor" red="0.1960784314" green="0.20000000000000001" blue="0.20784313730000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -156,7 +144,7 @@
                         <constraint firstAttribute="trailing" secondItem="xzd-Ap-zcN" secondAttribute="trailing" constant="37" id="Gy7-0k-xNl"/>
                         <constraint firstItem="xzd-Ap-zcN" firstAttribute="top" secondItem="J4e-0y-stj" secondAttribute="top" constant="36" id="H0K-h3-H2K"/>
                         <constraint firstItem="KEf-XZ-kbp" firstAttribute="top" secondItem="xzd-Ap-zcN" secondAttribute="top" constant="-28" id="OGn-Na-Hu3"/>
-                        <constraint firstItem="KEf-XZ-kbp" firstAttribute="leading" secondItem="KMe-Oa-fqG" secondAttribute="leading" constant="38" id="PPo-hK-hdp"/>
+                        <constraint firstItem="KEf-XZ-kbp" firstAttribute="leading" secondItem="KMe-Oa-fqG" secondAttribute="leading" constant="96" id="PPo-hK-hdp"/>
                         <constraint firstItem="7GE-jq-JzX" firstAttribute="trailing" secondItem="xzd-Ap-zcN" secondAttribute="trailing" id="XDc-Fy-E0M"/>
                         <constraint firstItem="IcO-UO-xV9" firstAttribute="trailing" secondItem="xzd-Ap-zcN" secondAttribute="trailing" id="XmQ-f2-q1E"/>
                         <constraint firstItem="xzd-Ap-zcN" firstAttribute="leading" secondItem="J4e-0y-stj" secondAttribute="leading" constant="37" id="bhR-pV-wgT"/>
@@ -167,36 +155,50 @@
                     </constraints>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lQZ-m7-sZA">
-                    <rect key="frame" x="37" y="493" width="301" height="35"/>
+                    <rect key="frame" x="15" y="478" width="345" height="47"/>
                     <color key="backgroundColor" red="0.44705882352941179" green="0.46274509803921571" blue="0.47843137254901963" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="35" id="X4z-Js-xIw"/>
+                        <constraint firstAttribute="height" constant="47" id="X4z-Js-xIw"/>
                     </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
                     <state key="normal" title="注册">
-                        <color key="titleColor" red="0.7843137255" green="0.63921568630000003" blue="0.20784313730000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="titleColor" red="0.92941176470588238" green="0.72549019607843135" blue="0.062745098039215685" alpha="1" colorSpace="calibratedRGB"/>
                     </state>
                     <connections>
                         <action selector="clickMailRegist:" destination="-1" eventType="touchUpInside" id="5NA-3i-vSU"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LF2-Vo-9q5">
+                    <rect key="frame" x="278" y="535" width="82" height="20"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="20" id="aCI-cg-oIQ"/>
+                        <constraint firstAttribute="width" constant="82" id="fas-Wt-LJl"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                    <state key="normal" title="手机号注册">
+                        <color key="titleColor" red="0.5607843137254902" green="0.5607843137254902" blue="0.5607843137254902" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </state>
+                    <connections>
+                        <action selector="clickPhoneRegist:" destination="-1" eventType="touchDown" id="9kn-JA-EAJ"/>
                     </connections>
                 </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="J4e-0y-stj" firstAttribute="top" secondItem="dF1-lW-zH1" secondAttribute="top" constant="235" id="0TC-R8-IY7"/>
-                <constraint firstItem="rzC-s0-t4n" firstAttribute="top" secondItem="lQZ-m7-sZA" secondAttribute="top" constant="40" id="3Yb-zT-kTt"/>
-                <constraint firstItem="AsB-Dw-CQi" firstAttribute="leading" secondItem="lQZ-m7-sZA" secondAttribute="leading" constant="20" id="64a-By-Rxv"/>
-                <constraint firstItem="lQZ-m7-sZA" firstAttribute="top" secondItem="J4e-0y-stj" secondAttribute="bottom" constant="62" id="DkU-TY-aDL"/>
+                <constraint firstItem="rzC-s0-t4n" firstAttribute="top" secondItem="lQZ-m7-sZA" secondAttribute="top" constant="57" id="3Yb-zT-kTt"/>
+                <constraint firstItem="AsB-Dw-CQi" firstAttribute="leading" secondItem="lQZ-m7-sZA" secondAttribute="leading" constant="1" id="64a-By-Rxv"/>
+                <constraint firstItem="lQZ-m7-sZA" firstAttribute="top" secondItem="J4e-0y-stj" secondAttribute="bottom" constant="47" id="DkU-TY-aDL"/>
                 <constraint firstItem="n0e-FT-PVP" firstAttribute="centerX" secondItem="dF1-lW-zH1" secondAttribute="centerX" id="LMx-w5-rjF"/>
                 <constraint firstItem="J4e-0y-stj" firstAttribute="leading" secondItem="dF1-lW-zH1" secondAttribute="leading" id="Mnn-AO-6M5"/>
-                <constraint firstItem="lQZ-m7-sZA" firstAttribute="leading" secondItem="J4e-0y-stj" secondAttribute="leading" constant="37" id="RWB-ey-G2h"/>
+                <constraint firstItem="lQZ-m7-sZA" firstAttribute="leading" secondItem="J4e-0y-stj" secondAttribute="leading" constant="15" id="RWB-ey-G2h"/>
                 <constraint firstItem="J4e-0y-stj" firstAttribute="trailing" secondItem="dF1-lW-zH1" secondAttribute="trailing" id="VUR-N7-8IB"/>
-                <constraint firstItem="rzC-s0-t4n" firstAttribute="leading" secondItem="lQZ-m7-sZA" secondAttribute="leading" constant="20" id="cFL-Lq-O2i"/>
-                <constraint firstItem="LF2-Vo-9q5" firstAttribute="top" secondItem="lQZ-m7-sZA" secondAttribute="top" constant="40" id="cR5-Sj-3Wv"/>
-                <constraint firstItem="AsB-Dw-CQi" firstAttribute="top" secondItem="lQZ-m7-sZA" secondAttribute="top" constant="60" id="l4j-MJ-ADd"/>
+                <constraint firstItem="rzC-s0-t4n" firstAttribute="leading" secondItem="lQZ-m7-sZA" secondAttribute="leading" constant="1" id="cFL-Lq-O2i"/>
+                <constraint firstItem="LF2-Vo-9q5" firstAttribute="top" secondItem="lQZ-m7-sZA" secondAttribute="top" constant="57" id="cR5-Sj-3Wv"/>
+                <constraint firstItem="AsB-Dw-CQi" firstAttribute="top" secondItem="lQZ-m7-sZA" secondAttribute="top" constant="78" id="l4j-MJ-ADd"/>
                 <constraint firstItem="dF1-lW-zH1" firstAttribute="top" secondItem="n0e-FT-PVP" secondAttribute="top" constant="-55" id="poR-DU-zCK"/>
-                <constraint firstItem="LF2-Vo-9q5" firstAttribute="trailing" secondItem="lQZ-m7-sZA" secondAttribute="trailing" constant="-20" id="t5H-E2-K2a"/>
-                <constraint firstItem="lQZ-m7-sZA" firstAttribute="trailing" secondItem="J4e-0y-stj" secondAttribute="trailing" constant="-37" id="tsG-Jz-2Zf"/>
+                <constraint firstItem="LF2-Vo-9q5" firstAttribute="trailing" secondItem="lQZ-m7-sZA" secondAttribute="trailing" id="t5H-E2-K2a"/>
+                <constraint firstItem="lQZ-m7-sZA" firstAttribute="trailing" secondItem="J4e-0y-stj" secondAttribute="trailing" constant="-15" id="tsG-Jz-2Zf"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="dF1-lW-zH1"/>
             <point key="canvasLocation" x="32.5" y="60.5"/>
