--- a/StockAnalysis/UserInfo/SafeViewController.xib
+++ b/StockAnalysis/UserInfo/SafeViewController.xib
@@ -18,6 +18,7 @@
                 <outlet property="passwordInput" destination="xzm-bG-LYA" id="zOf-Y3-kxm"/>
                 <outlet property="phoneBindImage" destination="7e1-dE-mNk" id="ebQ-v9-ywW"/>
                 <outlet property="phoneBindLabel" destination="PeL-qJ-YDu" id="Z84-ce-nRc"/>
+                <outlet property="switchBtn" destination="sdd-PC-QrN" id="fcQ-dk-Gy9"/>
                 <outlet property="verifyView" destination="70R-I8-6Z4" id="Imt-el-qQy"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
